# binary-accretion

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix  notes.md  rust.nix
report/: abstract.tex  discussion.tex  introduction.tex  main.tex  method.tex  references.bib  result.tex  titlepage.tex
report/theory/: fluid_dynamics.tex  gravity.tex  ideal_gas.tex  n-body_simulation.tex  neighborhoods.tex  smoothed_particle_hydrodynamics.tex  spatial_partitioning.tex
src/: camera.rs  constants.rs  main.rs  neighbors.rs  observe.rs  particle.rs  simulation.rs  statistics.rs  vector.rs
